# PostApocalypse

./: .gitignore  CMakeLists.txt
assets/cathedral/: cathedral.gltf
assets/helmet/: helmet.gltf
assets/skybox/: sh.txt
engine/inc/: actor.hpp  camera.hpp  editor.hpp  engine.hpp  input.hpp  profiler.hpp  renderer.hpp  resources.hpp  scene.hpp  shader_data.hpp  window.hpp
engine/src/: actor.cpp  camera.cpp  editor.cpp  engine.cpp  engine_pch.hpp  input.cpp  profiler.cpp  renderer.cpp  resources.cpp  scene.cpp  window.cpp
game/: CMakeLists.txt
game/inc/: post_apocalyptic.hpp
game/src/: post_apocalyptic.cpp
shaders/: bloom_blur.slang  bloom_combine.slang  bloom_extract.slang  common.slang  cull.slang  depth_prepass.slang  fog.slang  gen_shaders.py  grass.slang  lights.slang  model.slang  shadow.slang  skybox.slang  ssao.slang  ssao_blur.slang  tonemap.slang
